Changelog
=========

1.33-dev - (unreleased)
-----------------------
 * Bug fix: make tests pass [tiberich]
 * Change: refactor versioning code for specifications to be used outside of views [tiberich]
 * Change: refactor version reassigning code [tiberich]
 * Bug fix: rename @@object_delete to @@obj_delete as it conflicts with a formcontroller script [tiberich #4028]

1.32 - (2011-01-05)
-------------------
 * Bug fix: revert change made in 1.31, no longer directly implement IVersionEnhanced for Assessments, Specifications and IndicatorFactSheets [tiberich #4024]
 * Bug fix: improve checks for versions in code that decides if spec code is duplicated [tiberich]
 * Change: Visual fix for too tall metadata box on assessment view, now displayed in a more compact way [demarant]

1.31 - (2011-01-04)
-------------------
 * Bug fix: Made Assessments, Specifications, IndicatorFactSheets implement IVersionEnhanced [tiberich #4024]
 * Bug fix: Balance named link tags because of browser issues [tiberich]

1.30 - (2010-12-21)
-------------------
 * Change: enabled annual management plan validator, refs #4019 [demarant]
 * Change: Made eea management plan required for publishing, removed redundant old code [demarant]

1.29 - (2010-12-17)
-------------------
 * Bug fix: Fixed title calculation for Specification [tiberich #4006]

1.28 - (2010-12-16)
-------------------
 * Work in progress: Fixed code accordingly to pass PyFlakes tests [tiberich, ghicaale #3676]

1.27 - (2010-12-13)
-------------------
 * Bug fix: Fixed jslint warnings [voineali #3821]

1.26 - (2010-12-06)
-------------------
 * Feature: Allow reassigning codes when related specifications have different codes [tiberich #3756]
 * Feature: Added @@ims_wrong_maincode admin view to see and fix related specs with different codes [tiberich #3756]
 * Bug fix: Added Specification2Surf adapter to solve @@rdf view problem [tiberich #3893]

1.25 - (2010-11-19)
-------------------