@@ -3,6 +3,8 @@ Changelog
 
 1.33-dev - (unreleased)
 -----------------------
+ * Change: Make the readiness message for wrong version on Assessment more clear [tiberich]
+ * Bug fix: Fix rendering of ExternalDataSource url [tiberich #4010]
  * Bug fix: make tests pass [tiberich]
  * Change: refactor versioning code for specifications to be used outside of views [tiberich]
  * Change: refactor version reassigning code [tiberich]
